--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,14 @@
 
   <link rel="stylesheet" href="css/flaticon.css">
   <link rel="stylesheet" href="css/style.css">
+
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
+<style>
+  .mySlides {display:none}
+  .w3-left, .w3-right, .w3-badge {cursor:pointer}
+  .w3-badge {height:13px;width:13px;padding:0}
+</style>
 
 <body>
 
@@ -69,129 +76,34 @@
   </div>
 </nav>
 <!-- END nav -->
-<div class="hero-wrap js-fullheight" style="background-image: url('images/bg_1.jpg');"
-     data-stellar-background-ratio="0.5">
-  <div class="overlay"></div>
-  <div class="container">
-    <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center"
-         data-scrollax-parent="true">
-      <div class="col-md-11 ftco-animate text-center">
-        <h1 class="mb-4">Highest Quality Care For Pets You'll Love </h1>
-      </div>
-    </div>
+<div class="w3-content w3-display-container" style="max-width:2000px" >
+  <img class="mySlides" src="images/TEST.png" style="width:100%" height="350px">
+  <img class="mySlides" src="images/cat2.jpg" style="width:100%" height="350px">
+  <img class="mySlides" src="images/cat3.jpg" style="width:100%" height="350px">
+  <img class="mySlides" src="images/cat4.jpg" style="width:100%" height="350px">
+
+  <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
+
+    <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
+    <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
+
+    <!-- bug 自動換頁時按鈕無法更新(手動的正常) -->
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+    <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(4)"></span>
   </div>
 </div>
 
 
 
-<section class="ftco-section testimony-section" style="background-image: url('images/bg_2.jpg');">
-  <div class="overlay"></div>
-  <div class="container">
-    <div class="row justify-content-center pb-5 mb-3">
-      <div class="col-md-7 heading-section text-center ftco-animate">
-        <h2>Happy Clients &amp; Feedbacks</h2>
-      </div>
-    </div>
-    <div class="row ftco-animate">
-      <div class="col-md-12">
-        <div class="carousel-testimony owl-carousel ftco-owl">
-          <div class="item">
-            <div class="testimony-wrap py-4">
-              <div class="icon d-flex align-items-center justify-content-center"><span
-                      class="fa fa-quote-left"></span></div>
-              <div class="text">
-                <p class="mb-4">Far far away, behind the word mountains, far from the countries
-                  Vokalia and Consonantia, there live the blind texts.</p>
-                <div class="d-flex align-items-center">
-                  <div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
-                  <div class="pl-3">
-                    <p class="name">Roger Scott</p>
-                    <span class="position">Marketing Manager</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="testimony-wrap py-4">
-              <div class="icon d-flex align-items-center justify-content-center"><span
-                      class="fa fa-quote-left"></span></div>
-              <div class="text">
-                <p class="mb-4">Far far away, behind the word mountains, far from the countries
-                  Vokalia and Consonantia, there live the blind texts.</p>
-                <div class="d-flex align-items-center">
-                  <div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
-                  <div class="pl-3">
-                    <p class="name">Roger Scott</p>
-                    <span class="position">Marketing Manager</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="testimony-wrap py-4">
-              <div class="icon d-flex align-items-center justify-content-center"><span
-                      class="fa fa-quote-left"></span></div>
-              <div class="text">
-                <p class="mb-4">Far far away, behind the word mountains, far from the countries
-                  Vokalia and Consonantia, there live the blind texts.</p>
-                <div class="d-flex align-items-center">
-                  <div class="user-img" style="background-image: url(images/person_3.jpg)"></div>
-                  <div class="pl-3">
-                    <p class="name">Roger Scott</p>
-                    <span class="position">Marketing Manager</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="testimony-wrap py-4">
-              <div class="icon d-flex align-items-center justify-content-center"><span
-                      class="fa fa-quote-left"></span></div>
-              <div class="text">
-                <p class="mb-4">Far far away, behind the word mountains, far from the countries
-                  Vokalia and Consonantia, there live the blind texts.</p>
-                <div class="d-flex align-items-center">
-                  <div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
-                  <div class="pl-3">
-                    <p class="name">Roger Scott</p>
-                    <span class="position">Marketing Manager</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="testimony-wrap py-4">
-              <div class="icon d-flex align-items-center justify-content-center"><span
-                      class="fa fa-quote-left"></span></div>
-              <div class="text">
-                <p class="mb-4">Far far away, behind the word mountains, far from the countries
-                  Vokalia and Consonantia, there live the blind texts.</p>
-                <div class="d-flex align-items-center">
-                  <div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
-                  <div class="pl-3">
-                    <p class="name">Roger Scott</p>
-                    <span class="position">Marketing Manager</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
 
 <section class="ftco-section">
   <div class="container">
     <div class="row justify-content-center pb-5 mb-3">
 
       <div class="col-md-7 heading-section text-center ftco-animate">
-        <h2>Pets Gallery</h2>
+        <h2>領養資訊</h2>
       </div>
     </div>
     <div class="row">
@@ -288,7 +200,7 @@
 <script src="js/google-map.js"></script>
 <script src="js/main.js"></script>
 
-
+<script src="js/index.js"></script>
 
 </body>
 
