--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,9 +27,26 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <style>
-  .mySlides {display:none}
-  .w3-left, .w3-right, .w3-badge {cursor:pointer}
-  .w3-badge {height:13px;width:13px;padding:0}
+  .mySlides {
+    display: none
+  }
+
+  .w3-left,
+  .w3-right,
+  .w3-badge {
+    cursor: pointer
+  }
+
+  .w3-badge {
+    height: 13px;
+    width: 13px;
+    padding: 0
+  }
+
+  .w3-border{
+    margin-left:auto;
+    margin-right: auto;
+  }
 </style>
 
 <body>
@@ -56,7 +73,8 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
   <div class="container">
-    <a class="navbar-brand" href="http://localhost:8080/index"><span class="flaticon-pawprint-1 mr-2"></span>寵物資訊平台</a>
+    <a class="navbar-brand" href="http://localhost:8080/index"><span
+            class="flaticon-pawprint-1 mr-2"></span>寵物資訊平台</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
             aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="fa fa-bars"></span>
@@ -76,7 +94,7 @@
   </div>
 </nav>
 <!-- END nav -->
-<div class="w3-content w3-display-container" style="max-width:2000px" >
+<div class="w3-content w3-display-container" style="max-width:2000px">
   <img class="mySlides" src="images/TEST.png" style="width:100%" height="350px">
   <img class="mySlides" src="images/cat2.jpg" style="width:100%" height="350px">
   <img class="mySlides" src="images/cat3.jpg" style="width:100%" height="350px">
@@ -108,10 +126,8 @@
     </div>
     <div class="row">
       <div class="col-md-4 ftco-animate">
-        <div class="work mb-4 img d-flex align-items-end"
-             style="background-image: url(images/gallery-1.jpg);">
-          <a href="images/gallery-1.jpg"
-             class="icon image-popup d-flex justify-content-center align-items-center">
+        <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-1.jpg);">
+          <a href="images/gallery-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
             <span class="fa fa-expand"></span>
           </a>
           <div class="desc w-100 px-4">
@@ -125,10 +141,8 @@
         </div>
       </div>
       <div class="col-md-4 ftco-animate">
-        <div class="work mb-4 img d-flex align-items-end"
-             style="background-image: url(images/gallery-2.jpg);">
-          <a href="images/gallery-2.jpg"
-             class="icon image-popup d-flex justify-content-center align-items-center">
+        <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-2.jpg);">
+          <a href="images/gallery-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
             <span class="fa fa-expand"></span>
           </a>
           <div class="desc w-100 px-4">
@@ -140,10 +154,8 @@
         </div>
       </div>
       <div class="col-md-4 ftco-animate">
-        <div class="work mb-4 img d-flex align-items-end"
-             style="background-image: url(images/gallery-3.jpg);">
-          <a href="images/gallery-3.jpg"
-             class="icon image-popup d-flex justify-content-center align-items-center">
+        <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-3.jpg);">
+          <a href="images/gallery-3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
             <span class="fa fa-expand"></span>
           </a>
           <div class="desc w-100 px-4">
@@ -154,6 +166,8 @@
           </div>
         </div>
       </div>
+      <input class="w3-btn w3-orange w3-border w3-border-orange w3-round-xlarge" type="button"
+             onclick="location.href='http://localhost:8080/personal_shelter';" value="查看更多" />
 
 </section>
 
@@ -167,10 +181,8 @@
     </div>
     <div class="row">
       <div class="col-md-4 ftco-animate">
-        <div class="work mb-4 img d-flex align-items-end"
-             style="background-image: url(images/gallery-1.jpg);">
-          <a href="images/gallery-1.jpg"
-             class="icon image-popup d-flex justify-content-center align-items-center">
+        <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-1.jpg);">
+          <a href="images/gallery-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
             <span class="fa fa-expand"></span>
           </a>
           <div class="desc w-100 px-4">
@@ -183,10 +195,8 @@
         </div>
       </div>
       <div class="col-md-4 ftco-animate">
-        <div class="work mb-4 img d-flex align-items-end"
-             style="background-image: url(images/gallery-2.jpg);">
-          <a href="images/gallery-2.jpg"
-             class="icon image-popup d-flex justify-content-center align-items-center">
+        <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-2.jpg);">
+          <a href="images/gallery-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
             <span class="fa fa-expand"></span>
           </a>
           <div class="desc w-100 px-4">
@@ -198,10 +208,8 @@
         </div>
       </div>
       <div class="col-md-4 ftco-animate">
-        <div class="work mb-4 img d-flex align-items-end"
-             style="background-image: url(images/gallery-3.jpg);">
-          <a href="images/gallery-3.jpg"
-             class="icon image-popup d-flex justify-content-center align-items-center">
+        <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-3.jpg);">
+          <a href="images/gallery-3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
             <span class="fa fa-expand"></span>
           </a>
           <div class="desc w-100 px-4">
@@ -212,8 +220,14 @@
           </div>
         </div>
       </div>
+      <input class="w3-btn w3-orange w3-border w3-border-orange w3-round-xlarge " type="button"
+             onclick="location.href='http://localhost:8080/missing';" value="查看更多" />
 
 </section>
+
+
+
+
 
 
 <footer class="footer">
